Revert "Bug 25242: Improve column wrapping and overflow for tables"
This reverts commit a3a09d09e3b32c0a0f2e9b7acf652abeab694353.

And also reverts the 3 other commits from bug 25242.

Revert "Bug 25242: Compiled CSS"

This reverts commit 198bbfa4094da1bfe143eb046d0c36bf68a93ab9.

Revert "Bug 25242: (QA follow-up) Remove deprecated break-word"

This reverts commit c3680149be734959d8b59223b083efdfb271580d.

Revert "Bug 25242: (QA follow-up) Colwidth on results table"

This reverts commit 84cbf0b9379d025d68f381e6dc7ca3772cc7d093.

--- a/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
+++ b/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
@@ -221,21 +221,11 @@ legend {
 
 table {
     font-size: 90%;
-    table-layout: fixed;
 }
 
 table,
 td {
     background-color: #FFF;
-    word-wrap: break-all;
-
-    &.selectcol {
-        width: 1ch;
-    }
-
-    &.numcol {
-        width: 3ch;
-    }
 }
 
 tr {
@@ -265,7 +255,6 @@ td {
 
 th {
     background-color: #E2E8E8;
-    word-wrap: break-all;
 
     &.sum {
         text-align: right;
